syntax = "proto3";

package sjchat.messages;

import "user-service.proto";

option java_multiple_files = true;
option java_package = "sjchat.messages";
option java_outer_classname = "MessageServiceProto";

service MessageService {
    rpc getChatList (GetChatListRequest) returns (GetChatListResponse);
    rpc createChat (CreateChatRequest) returns (CreateChatResponse);
    rpc getChat (GetChatRequest) returns (GetChatResponse);
    rpc updateChat (UpdateChatRequest) returns (UpdateChatResponse);
    rpc getMessages (GetMessagesRequest) returns (GetMessagesResponse);
    rpc sendMessage (SendMessageRequest) returns (SendMessageResponse);
}

message GetChatListRequest {
}

message GetChatListResponse {
    repeated Chat chats = 1;
}

message CreateChatRequest {
    string title = 1;
    repeated int64 participants = 2;
}

message CreateChatResponse {
    Chat chat = 1;
}

message GetChatRequest {
    int64 id = 1;
}

message GetChatResponse {
    Chat chat = 1;
}

message UpdateChatRequest {
    int64 id = 1;
    string title = 2;
    repeated int64 participants = 3;
}

message UpdateChatResponse {
    Chat chat = 1;
}

message GetMessagesRequest {
    int64 chatId = 1;
}

message GetMessagesResponse {
    repeated Message messages = 1;
}

message SendMessageRequest {
    string message = 1;
}

message SendMessageResponse {
    Message message = 1;
}

message Chat {
    int64 id = 1;
    string title = 2;
    repeated sjchat.users.User participants = 3;
}

message Message {
    int64 id = 1;
    string message = 2;
    int64 sender = 3;
}
